[package]
name = "tokio-aws-lc"
version = "0.0.0"
authors = ["Divy Srivastava <me@littledivy.com>"]
license = "MIT/Apache-2.0"
edition = "2018"
repository = "https://github.com/littledivy/tokio-aws-lc"
description = """
An implementation of SSL streams for Tokio backed by AWS-LC
"""

[dependencies]
tokio = "1.0"
aws-lc-sys = { version = "0.30.0", features = ["ssl"] }
bitflags = "*"
libc = "*"

[dev-dependencies]
futures-util = { version = "0.3", default-features = false }
tokio = { version = "1.0", features = ["full"] }
